@@ -19,6 +19,7 @@ namespace format_v4 {
         bool game_finished;             // stores if game was finished, so we can show more options to player
         Uint8 selected_input_device;
         char selected_language[2];
+        bool turbo_mode;
 
 
         void get_default_keys(int keys_codes_copy[BTN_COUNT]) {
@@ -183,6 +184,7 @@ namespace format_v4 {
             // Note: do not change game_finished when resetting
             selected_input_device = 0;
             selected_language[0] = '\0';
+            turbo_mode = false;
         }
 
 
